--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 Jokes.xcodeproj/project.xcworkspace/xcuserdata/kirill.xcuserdatad/UserInterfaceState.xcuserstate
+Jokes.xcworkspace/xcuserdata/kirill.xcuserdatad/UserInterfaceState.xcuserstate
