--- a/Jokes.xcodeproj/xcshareddata/xcschemes/Jokes.xcscheme
+++ b/Jokes.xcodeproj/xcshareddata/xcschemes/Jokes.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "EDEF2260243A4A3100B251DC"
-               BuildableName = "Jokes.app"
+               BuildableName = "Infinity meme.app"
                BlueprintName = "Jokes"
                ReferencedContainer = "container:Jokes.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EDEF2260243A4A3100B251DC"
-            BuildableName = "Jokes.app"
+            BuildableName = "Infinity meme.app"
             BlueprintName = "Jokes"
             ReferencedContainer = "container:Jokes.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "EDEF2260243A4A3100B251DC"
-            BuildableName = "Jokes.app"
+            BuildableName = "Infinity meme.app"
             BlueprintName = "Jokes"
             ReferencedContainer = "container:Jokes.xcodeproj">
          </BuildableReference>
